# im-not-finder

./: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.js
src/: App.svelte  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  config.rs  lib.rs  main.rs  session.rs  win_drag.rs
src-tauri/src/transport/: adb.rs  local.rs  mod.rs  ssh.rs
src/components/: ConnectDialog.svelte  ConnectionBar.svelte  FileTree.svelte  HexView.svelte  MacroEditor.svelte  MacroPad.svelte  MainPanel.svelte  Splitter.svelte  StatusBar.svelte  TerminalInstance.svelte  TerminalPanel.svelte  TextView.svelte
src/lib/: api.ts  kitty-keyboard.ts  macros.svelte.ts
src/styles/: theme.css
