[package]
name = "im-not-finder"
version = "1.0.0"
description = "Unified SSH/ADB workbench"
authors = ["dongkim"]
edition = "2021"

[lib]
name = "imnf_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-drag = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
russh = "0.45"
russh-sftp = "2.0"
tempfile = "3"
anyhow = "1"
tauri-plugin-clipboard-manager = "2.3.2"
portable-pty = "0.9.0"
